# Syqlorix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  demo-component.py  demo-state.py  demo-tailwind.py  demo.css  demo.py  pyproject.toml  syqlorix.thrift  template.py  underscore_demo.py
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-package.yml
demo_test/: app.py  test_app.py
examples/: basic.py  dev_server_example.py  flask_integration.py  multi_page_site.py  my_custom_button_comp.py
mds/: README-ceb.md  README-de.md  README-es.md  README-fil.md  README-ru.md  README-zh-Hans.md
rust_ext/: Cargo.toml
rust_ext/src/: lib.rs
scala_backend/: SyqlorixServer.scala
syqlorix/: __init__.py  cli.py  core.py  core.pyi  devserver.py  request.py  tailwind.py  templating.py  templating.pyi
syqlorix/thrift_gen/syqlorix/thrift/: SyqlorixService-remote  SyqlorixService.py  __init__.py  ttypes.py
tests/: test_cli.py  test_core.py  test_performance.py  test_templating.py
