[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "syqlorix"
version = "1.4.2"
description = "A high-performance, hyper-minimalist hybrid web framework for Python. It combines a pure Python DSL with a Rust-powered core for maximum speed, secure Starlark-based components, and an optional distributed Scala backend, complete with live-reloading and static site generation."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["html", "css", "javascript", "dsl", "web", "components", "state-management", "static-site-generator", "ui", "live-reload", "routing", "static-server"]
authors = [
  { name = "Karl Benjamin R. Bughaw", email = "benjo@pro.space" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML"
]

dependencies = [
    "click>=8.0",
    "watchdog>=2.0",
    "websockets>=12.0",
    "jsmin>=3.0",
    "cssmin>=0.2",
    "requests>=2.25.0",
    "starlark-pyo3>=0.1.0",
    "thrift>=0.13.0"
]

[project.optional-dependencies]
full = [
  "syqlorix"
]

[project.urls]
Homepage = "https://github.com/Syqlorix/Syqlorix"
"Bug Tracker" = "https://github.com/Syqlorix/Syqlorix/issues"

[project.scripts]
syqlorix = "syqlorix.cli:main"

[tool.maturin]
manifest-path = "rust_ext/Cargo.toml"
python-source = "."
module-name = "syqlorix.syqlorix_rust"