[package]
name = "syqlorix_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "syqlorix_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["blocking"] }
dirs = "5.0"
tempfile = "3"
rand = "0.8"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 3
strip = true

